# wgpu-winit-template

./: Cargo.toml  LICENSE.md  Makefile
docs/: getting-started.md
html/: README.md  index.html
src/: app.rs  egui_tools.rs  lib.rs  main.rs  shader.wgsl  structs.rs  web.rs
src/state/: gpu.rs  user_input.rs
src/web/: mod.rs  wasm.rs  web.rs
tests/: simple_osc.vmoog
