[package]
name = "wgpu-winit-template"
version = "0.1.0"
authors = ["Miles <milesjconn@gmail.com>"]
edition = "2021"

[dependencies]
cfg-if = "1"
winit = { version = "0.30.5", features = ["rwh_05"] }
env_logger = "0.11.5"
log = "0.4.22"
wgpu = "22.1.0"
pollster = "0.3.0"
parking_lot = "0.12.3"
take_mut = "0.2.2"
bytemuck = "1.19.0"
bevy_crevice = "0.7.0"
futures-executor = "0.3.31"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
egui-wgpu = { version = "0.29.1", features = ["winit"] }
egui-winit = { version = "0.29.1", default-features = false }
wgpu = { version = "22.1.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
wasm-rs-async-executor = "0.9.0"

[lib]
crate-type = ["cdylib", "rlib"]
